# pelagodb

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.multisite.yml  docker-compose.test.yml  docker-compose.yml  pelago-server.example.toml
.cargo/: config.toml
.github/workflows/: ci-gates.yml  operator-image.yml  operator-kind-e2e.yml
.llm/context/: graph-db-spec-v0.4.md  health-service-spec.md  janusgraph-architecture-deep-dive.md  pelagodb-spec-v1-section-watch.md  pelagodb-spec-v1-security-section.md  pelagodb-spec-v1.md  research-c1-index-intersection.md  research-c6-property-removal.md  research-i1-null-handling.md  research-phase1-outcome-clarity.md  research-undocumented-gaps.md  section-18-rocksdb-cache.md
.tmp/bench/: context-latest.json  vfx-show001-breakdown-after-bulk-legacy-meta-restart.json  vfx-show001-breakdown-after-bulk-legacy-meta.json  vfx-show001-breakdown-after-rangefix.json  vfx-show001-direct-grpc-traverse-1hop-after-rangefix-and-batchnodes.json  vfx-show001-direct-grpc-traverse-1hop-after-rangefix-final.json  vfx-show001-direct-grpc-traverse-1hop-after-rangefix.json  vfx-show001-direct-grpc-traverse-1hop-batchget.json  vfx-show001-direct-grpc-traverse-1hop-forwardval-readpath-retry-nocache.json  vfx-show001-direct-grpc-traverse-1hop-forwardval-readpath-retry.json  vfx-show001-direct-grpc-traverse-1hop-opt.json  vfx-show001-direct-grpc-traverse-show-has-asset-batchget.json  vfx-show001-direct-grpc-traverse.json  vfx-show001-direct-grpc.json  vfx-show001-fanout-worker-sweep.json  vfx-show001-node-consistency-cache.json  vfx-show001-or-vs-fanout-20codes.json  vfx-show001-parallel-ops-broad.json  vfx-show001-parallel-ops.json  vfx-show001-shot-traverse.json  vfx-show001-stage-comp.json  vfx-show001-stage-or.json  vfx-show001-unique.json
.tmp/perf/: latest-gate.json  manual-S1 S2 S3 S4 S5 S6-cli.json  manual-S1-cli.json  manual-S1-grpc.json  manual-S2-cli.json  manual-S2-grpc.json  manual-S3-cli.json  manual-S3-grpc.json  manual-S4-cli.json  manual-S4-grpc.json  manual-S5-cli.json  manual-S5-grpc.json  manual-S6-cli.json  manual-S6-grpc.json  observability-local.json  planmode-S1.json  planmode-S2.json  planmode-S3.json  planmode-S4.json  planmode-S5.json  planmode-S6.json  (+69 more)
clients/: README.md
clients/python/: README.md  pyproject.toml  requirements-dev.txt
clients/python/examples/: auth_and_audit.py  basic_crud.py  onboarding_course.py  query_and_pql.py  typed_crud.py
clients/python/pelagodb/: __init__.py  client.py  namespace_view.py  query.py  schema.py  types.py  watch.py
clients/python/scripts/: generate_proto.sh
clients/python/tests/: test_query.py  test_schema.py  test_watch.py
crates/pelago-api/: Cargo.toml
crates/pelago-api/src/: admin_service.rs  auth_service.rs  authz.rs  edge_service.rs  error.rs  health_service.rs  lib.rs  node_service.rs  query_service.rs  replication_service.rs  schema_service.rs  service_common.rs  watch_service.rs
crates/pelago-api/src/watch_service/: dispatch.rs  filter.rs  snapshot.rs  state.rs
crates/pelago-cli/: Cargo.toml
crates/pelago-cli/src/: config.rs  connection.rs  main.rs  output.rs  schema_input.rs
crates/pelago-cli/src/commands/: admin.rs  edge.rs  mod.rs  node.rs  query.rs  schema.rs
crates/pelago-cli/src/repl/: mod.rs  ux.rs
crates/pelago-cli/tests/: cli_integration.rs  repl_integration.rs
crates/pelago-cli/tests/common/: mod.rs
crates/pelago-operator/: Cargo.toml  Dockerfile  README.md
crates/pelago-operator/src/: controller.rs  lib.rs  main.rs  status.rs  webhook.rs
crates/pelago-operator/src/api/: v1alpha1.rs
crates/pelago-operator/src/resources/: mod.rs
crates/pelago-server/: Cargo.toml
crates/pelago-server/src/: auth_identity.rs  docs_server.rs  main.rs  replicator.rs
crates/pelago-server/src/ui_server/: mod.rs
crates/pelago-storage/: Cargo.toml
crates/pelago-storage/.tmp/simulation/: storage_consistency_17.json
crates/pelago-storage/examples/: test_fdb.rs
crates/pelago-storage/src/: cache.rs  cdc.rs  consumer.rs  db.rs  edge.rs  failpoints.rs  ids.rs  index.rs  job_executor.rs  job_worker.rs  jobs.rs  lib.rs  mutation.rs  namespace.rs  node.rs  replication.rs  schema.rs  security.rs  simulation.rs  subspace.rs  term_index.rs  watch_state.rs
crates/pelago-storage/src/rocks_cache/: config.rs  mod.rs  projector.rs  read_path.rs  store.rs
crates/pelago-storage/src/watch/: dispatcher.rs  mod.rs  registry.rs  resume.rs  subscriptions.rs  ttl_manager.rs
crates/pelago-storage/tests/: cache_integration.rs  cdc_integration.rs  fdb_integration.rs  job_integration.rs  lifecycle_test.rs  phase3_validation.rs  proptest_invariants.rs  replication_security_integration.rs  simulation_tests.rs
crates/pelago-storage/tests/common/: mod.rs
datasets/: README.md  generate_vfx_pipeline.py  load_dataset.py
docs/: 01-getting-started.md  02-cli-reference.md  03-api-grpc.md  04-administration.md  05-security-and-access.md  06-replication-and-multi-site.md  07-production-readiness.md  08-presentation-runbook.md  09-operations-playbook.md  10-client-sdks.md  11-troubleshooting.md  12-server-docs-site.md  13-centralized-replication-and-scaling.md  14-data-modeling-and-scaling.md  15-architecture-and-design.md  16-when-to-use-pelagodb.md  17-watch-and-streaming.md  18-onboarding-course.md  18-query-indexing-checklist-matrix.md  19-ui-console.md  20-pql-and-schema-reference.md  README.md
fuzz/: Cargo.toml  README.md
fuzz/corpus/pql_parser/: seed_basic.pql  seed_traversal.pql
fuzz/dictionaries/: pql.dict
fuzz/fuzz_targets/: cdc_decode.rs  mutation_payload.rs  pql_parser.rs
proto/: pelago.proto
scripts/: ci-gate.sh  dr-rehearsal.sh  onboarding-course.sh  perf-benchmark.py  presentation-env.example  presentation-smoke.sh  production-env.example  query-scaleout-check.py  simulation-smoke.sh  start-fdb.sh  stop-fdb.sh  test_perf_benchmark.py
spec/: context-indexing-proposal-v1.md  indexing-capabilities-roadmap-v1.md  query-indexing-checklist-matrix.md
ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+262 files in other folders)
