[workspace]
resolver = "2"
members = [
    "crates/pelago-core",
    "crates/pelago-proto",
    "crates/pelago-storage",
    "crates/pelago-query",
    "crates/pelago-api",
    "crates/pelago-server",
    "crates/pelago-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["PelagoDB Team"]
license = "Apache-2.0"
repository = "https://github.com/pelagodb/pelagodb"

[workspace.dependencies]
# Async
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
ciborium = "0.2"

# FDB
foundationdb = { version = "0.10", features = ["embedded-fdb-include", "fdb-7_3"] }

# gRPC
tonic = { version = "0.12", features = ["tls"] }
prost = "0.13"
prost-types = "0.13"

# Error handling
thiserror = "2"
anyhow = "1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# CEL
cel-interpreter = "0.9"

# PEG Parser
pest = "2"
pest_derive = "2"

# Utilities
uuid = { version = "1", features = ["v7"] }
bytes = "1"
async-trait = "0.1"
rocksdb = "0.22"

# Internal crates
pelago-core = { path = "crates/pelago-core" }
pelago-proto = { path = "crates/pelago-proto" }
pelago-storage = { path = "crates/pelago-storage" }
pelago-query = { path = "crates/pelago-query" }
pelago-api = { path = "crates/pelago-api" }
pelago-cli = { path = "crates/pelago-cli" }

# CLI extras
serde_json = "1"
comfy-table = "7"
rustyline = "14"
dirs = "5"
toml_edit = "0.22"
