[package]
name = "pelagodb-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
serde_json = "1"
pelago-core = { path = "../crates/pelago-core" }
pelago-query = { path = "../crates/pelago-query" }
pelago-storage = { path = "../crates/pelago-storage" }

[[bin]]
name = "pql_parser"
path = "fuzz_targets/pql_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "cdc_decode"
path = "fuzz_targets/cdc_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "mutation_payload"
path = "fuzz_targets/mutation_payload.rs"
test = false
doc = false
bench = false

[workspace]
