[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pelagodb-client"
version = "0.1.0"
description = "Python client SDK for PelagoDB"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "grpcio>=1.66.0",
  "protobuf>=5.27.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["pelagodb*"]
