[package]
name = "pelago-operator"
version.workspace = true
edition.workspace = true

[[bin]]
name = "pelago-operator"
path = "src/main.rs"

[[bin]]
name = "pelago-operator-crdgen"
path = "src/bin/crdgen.rs"

[dependencies]
anyhow.workspace = true
chrono = { version = "0.4", features = ["clock", "serde"] }
futures = "0.3"
k8s-openapi = { version = "0.27.0", features = ["v1_31", "schemars"] }
kube = { version = "3.0.1", features = ["runtime", "derive", "admission", "client", "rustls-tls"] }
kube-leader-election = "0.43.0"
parking_lot = "0.12"
schemars = "1"
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
axum = "0.7"
axum-server = { version = "0.7", features = ["tls-rustls"] }
json-patch = "4"

[dev-dependencies]
pretty_assertions = "1"
