[package]
name = "pelago-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "pelago-server"
path = "src/main.rs"

[dependencies]
pelago-core.workspace = true
pelago-proto.workspace = true
pelago-storage.workspace = true
pelago-query.workspace = true
pelago-api.workspace = true
tokio.workspace = true
tonic.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
metrics-exporter-prometheus.workspace = true
anyhow.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
axum = "0.7"
tower-http = { version = "0.6", features = ["fs", "limit"] }
tokio-stream = "0.1"
futures-util = "0.3"
base64 = "0.22"
pulldown-cmark = "0.12"
toml = "0.8"
sha2 = "0.10"
