[package]
name = "pelago-storage"
version.workspace = true
edition.workspace = true

[features]
default = ["cache"]
cache = ["dep:rocksdb"]
failpoints = []

[dependencies]
pelago-core.workspace = true
pelago-proto.workspace = true
tokio.workspace = true
foundationdb.workspace = true
serde.workspace = true
ciborium.workspace = true
thiserror.workspace = true
bytes.workspace = true
tracing.workspace = true
metrics.workspace = true
async-trait.workspace = true
uuid.workspace = true
rocksdb = { workspace = true, optional = true }
serde_json.workspace = true

[dev-dependencies]
pelago-query = { path = "../pelago-query" }
proptest = "1"
rand = "0.8"
rand_chacha = "0.3"
